[package]
name = "itron"
version = "0.1.0"
authors = [
    "Tomoaki Kawada",
]
license = "MIT OR Apache-2.0"
edition = "2018"
readme = "src/lib.md"
description = "Interface to operating systems based on μITRON and its derivatives."
categories = ["embedded", "no-std", "external-ffi-bindings", "os"]
repository = "https://github.com/kawadakk/itron-rs"

[features]
default = []
nightly = ["doc_cfg"]
doc_cfg = []
unstable = []

# --------------------------------------------------------
# Kernel selection
#  - Be sure to synchronize this with `build.rs`.
#  - Be sure to synchronize this with the "list of enabled features"
#    in `crate::abi`.
none = ["dcre", "rstr_task", "messagebuf", "ovrhdr", "subprio"]
asp3 = []

# --------------------------------------------------------
# Kernel customization
#  - Be sure to synchronize this with the "list of enabled features"
#    in `crate::abi`.

# Dynamic object creation. Enables owned wrapped types.
dcre = []

# "Restricted" tasks
rstr_task = []

# Message buffers
messagebuf = []

# Overrun handlers
ovrhdr = []

# Subpriorities
subprio = []

[dependencies]


[package.metadata.docs.rs]
# arbitrarily choose ASP3.
features = ["doc_cfg", "nightly", "unstable", "asp3", "dcre", "messagebuf",
    "ovrhdr", "subprio", "rstr_task"]
# only build the default target
targets = []
