[package]
name = "itron"
version = "0.1.3"
authors = [
    "Tomoaki Kawada",
]
license = "MIT OR Apache-2.0"
edition = "2018"
readme = "src/lib.md"
description = "Interface to operating systems based on μITRON and its derivatives."
categories = ["embedded", "no-std", "external-ffi-bindings", "os"]
repository = "https://github.com/kawadakk/itron-rs"
keywords = ["rtos", "toppers", "kernel"]

[features]
default = []
nightly = ["doc_cfg"]
doc_cfg = []
unstable = []

# --------------------------------------------------------
# Kernel selection
#  - Be sure to synchronize this with `build.rs`.
#  - Be sure to synchronize this with the "list of enabled features"
#    in `crate::abi`.
none = ["dcre", "rstr_task", "messagebuf", "ovrhdr", "subprio",
    "pi_mutex", "systim_local", "exd_tsk"]
asp3 = []
solid_asp3 = []
fmp3 = []
solid_fmp3 = []

# --------------------------------------------------------
# Kernel customization
#  - Be sure to synchronize this with the "list of enabled features"
#    in `crate::abi`.

# Dynamic object creation. Enables owned wrapped types.
dcre = []

# "Restricted" tasks
rstr_task = []

# Message buffers
messagebuf = []

# Overrun handlers
ovrhdr = []

# Subpriorities
subprio = []

# Priority-inheritance mutex
pi_mutex = []

# Processor-local kernel ticks
systim_local = []

# `exd_tsk`
exd_tsk = []

[dependencies]


[package.metadata.docs.rs]
# choose `none` to maximize the wrapper generation.
features = ["doc_cfg", "nightly", "unstable", "none"]
# only build the default target
targets = []
